Popup inside the screen

BUG:329272